--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html>
 
 <head>
-  <title>Baylor S&W</title>
+  <title>ASE Guidelines</title>
   <link rel="stylesheet" type="text/css" href="./style.css">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
 </head>
@@ -17,10 +17,10 @@
 
 	</nav> -->
 
-  	<div class="container zone body">Scott and White</div>
+  	<div class="container zone body">ASE Guidelines</div>
 
     <div class="container2 button">
-      <button class="grow"><a href="echo.html"class="button-text">Begin</a></button>
+      <button class="grow"><a href="echo guidelines.html"class="button-text">Begin</a></button>
     </div>
 
   	
