--- a/echo guidelines.html
+++ b/echo guidelines.html
@@ -26,8 +26,8 @@
         <div class="box zone grow"><a href="diastology.html"class="words">Diastology</a></div>
         <div class="box zone grow"><a href="https://drive.google.com/file/d/0B_GaOFFf0zybN1BOZkRaSXVZWnpPMGhhWE1MRFRPQ2FmaDg0/view?usp=sharing"class="words"target="_blank">MV Calculator</a></div>
         <div class="box zone grow"><a href="echo diagrams.html"class="words">Heart Diagrams</a></div>
-        <div class="box zone grow"><a href="echo protocols.html"class="words">Protocols</a></div>
-        <div class="box zone grow"><a href="echo forms.html"class="words">Forms</a></div>
+        <!-- <div class="box zone grow"><a href="echo protocols.html"class="words">Protocols</a></div> -->
+        <!-- <div class="box zone grow"><a href="echo forms.html"class="words">Forms</a></div> -->
         <div class="box zone grow"><a href="https://iaconlineaccreditation.org/webdriver/login.aspx"class="words"target="_blank">IAC</a></div>
         <div class="box zone grow"><a href="formulas.html"class="words">Formulas</a></div>
 
